Fixed navigation z-index on mobile, Fixed Carousel issue with TransitionendType, changed name from bundle to Kodhus in rollup config and added scrollstory

--- a/src/scss/_carousel.scss
+++ b/src/scss/_carousel.scss
@@ -81,6 +81,10 @@
         }
         width: 40px;
         height: 40px;
+        @media screen and (max-width: $mobile-breakpoint) {
+          width: 30px;
+          height: 30px;
+        }
         display: inline-block;
         position: relative;
         align-items: center;
