--- a/src/scss/_navigation.scss
+++ b/src/scss/_navigation.scss
@@ -192,6 +192,7 @@
         position: absolute;
         background: #fff;
         width: 100%;
+        z-index: 999999999;
         top: 60px;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
       }
